--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "wsp003",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@types/node": "^18.7.13",
-    "node-fetch": "^3.2.10",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.2"
-  },
-  "devDependencies": {
-    "jest": "^29.0.0"
-  }
+    "name": "wsp003",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "ex001": "ts-node ex001.ts",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@types/node": "^18.7.13",
+        "node-fetch": "^3.2.10",
+        "ts-node": "^10.9.1",
+        "typescript": "^4.8.2"
+    },
+    "devDependencies": {
+        "jest": "^29.0.0"
+    }
 }
